--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0.5rem;
   text-align: center;
   width: 100%;
+  height: 100svh;
+  display: flex;
+  align-items: end;
 }
 
 .logo {
