--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   padding: 0.5rem;
   text-align: center;
   width: 100%;
-  height: 100svh;
+  height: 100dvh;
   display: flex;
   align-items: flex-end;
 }
