--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   padding: 0.5rem;
   text-align: center;
   width: 100%;
-  min-height: 100dvh;
+  min-height: 100%;
   display: flex;
   align-items: flex-end;
 }
